[gd_scene load_steps=13 format=2]

[ext_resource path="res://Gölge.png" type="Texture" id=1]
[ext_resource path="res://Yeryuzu/Taş/Tas.gd" type="Script" id=2]
[ext_resource path="res://Yeryuzu/Taş/Taş.png" type="Texture" id=3]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.365079, 0.746032 )
colors = PoolColorArray( 1, 1, 1, 1, 0.294118, 0.305882, 0.294118, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 290.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 0.5
color_ramp = SubResource( 7 )

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform float hit_opacity = 0;

void fragment(){
 COLOR.rgb = texture(TEXTURE, UV).rgb * (1.0 - hit_opacity) + vec3(1,1,1) * hit_opacity;
 COLOR.a = texture(TEXTURE, UV).a ;
}
"

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/hit_opacity = 0.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 6.0

[sub_resource type="Animation" id=4]
resource_name = "Kırılma"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Tas:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gölge:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tas:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 2, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2.5, 0 ), Vector2( 0, 0 ), Vector2( -2.5, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Tas:material:shader_param/hit_opacity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Tas:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gölge:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tas:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Gölge:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Gölge:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Tas:material:shader_param/hit_opacity")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Vurulma"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Tas:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 2, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2.5, 0 ), Vector2( 0, 0 ), Vector2( -2.5, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gölge:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 2, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.5 ), Vector2( 2, 0.5 ), Vector2( 0, 0.5 ), Vector2( -2, 0.5 ), Vector2( 0, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tas:material:shader_param/hit_opacity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[node name="Tas" type="Node2D"]
script = ExtResource( 2 )

[node name="VurulmaEfek" type="Particles2D" parent="."]
emitting = false
amount = 5
lifetime = 0.2
one_shot = true
explosiveness = 1.0
fixed_fps = 60
local_coords = false
process_material = SubResource( 9 )

[node name="Gölge" type="Sprite" parent="."]
position = Vector2( 0, 0.5 )
scale = Vector2( 1.25, 0.53125 )
texture = ExtResource( 1 )

[node name="Tas" type="Sprite" parent="."]
material = SubResource( 11 )
texture = ExtResource( 3 )
offset = Vector2( 0, -9 )
hframes = 4
vframes = 2

[node name="TasStatic" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TasStatic"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="TasArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TasArea"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Kırılma" = SubResource( 4 )
anims/RESET = SubResource( 2 )
anims/Vurulma = SubResource( 3 )

[node name="TimerYokOlma" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="area_entered" from="TasArea" to="." method="_on_TasArea_area_entered"]
[connection signal="timeout" from="TimerYokOlma" to="." method="_on_TimerYokOlma_timeout"]
